--- a/Second.html
+++ b/Second.html
@@ -7,7 +7,7 @@
 <body bgcolor="cyan">
     <font size="6"><center>हर हर महादेव! </center></font>
     <br>
-    <font size="4"><b><bdo dir="ltr"><marquee behavior="slide" bgcolor="yellow" bgcolor="yellow">ॐ हौं जूं सः ॐ भूर्भुवः स्वः ॐ त्र्यम्बकं यजामहे सुगन्धिं पुष्टिवर्धनम् उर्वारुकमिव बन्धनान्मृ त्योर्मुक्षीय मामृतात् ॐ स्वः भुवः भूः ॐ सः जूं हौं ॐ।</marquee></b></bdo></font>
+    <font size="4"><b><bdo dir="ltr"><marquee behavior="scroll" bgcolor="yellow" bgcolor="yellow">ॐ हौं जूं सः ॐ भूर्भुवः स्वः ॐ त्र्यम्बकं यजामहे सुगन्धिं पुष्टिवर्धनम् उर्वारुकमिव बन्धनान्मृ त्योर्मुक्षीय मामृतात् ॐ स्वः भुवः भूः ॐ सः जूं हौं ॐ।</marquee></b></bdo></font>
     </br>
     <br>
     <center> <iframe src="https://www.youtube.com/embed/0y3-jzBJ_Ds" width="500" height="400"></iframe></center>
